Fix misspelling in mockup message

--- a/chatMockup/index.html
+++ b/chatMockup/index.html
@@ -127,7 +127,7 @@
                                 <div class="message-data">
                                     <span class="message-data-time">Today at 6:28 PM</span>
                                 </div>
-                                <div class="message my-message">how are you?</br>| apa kabur</div>                                    
+                                <div class="message my-message">how are you?</br>| apa kabar</div>                                    
                             </li>                               
                         </ul>
                     </div>
