--- a/chatMockup/index.html
+++ b/chatMockup/index.html
@@ -17,10 +17,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
     <div class="container-fluid d-flex">
-
-        <!-- Sidebar -->
         <div class="row flex-grow-1 vh-100">
-            <div class="col-1 bg-dark text-light">
+
+            <!-- Sidebar -->
+            <div class="col bg-dark text-light">
                 <div class="row vh-100">
                     <div class="btn-group-vertical h-25 align-middle align-self-center">
                         <button type="button" class="btn btn-dark">
@@ -51,10 +51,10 @@
             <!-- Message History List-->
             <div class="col-3 ">
                 <div class="row">
-                    <div class="col-10">
+                    <div class="col-10 people-header">
                         <h4>Messages</h4>
                     </div>
-                    <div class="col-2">
+                    <div id="new-message-button" class="col-2">
                         <button type="button" class="btn btn-transparent">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
                                 <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"></path>
@@ -106,9 +106,7 @@
                     <div class="chat-header clearfix">
                         <div class="row">
                             <div class="col-lg-6">
-                                <a  data-toggle="modal" data-target="#view_info">
-                                    <img src="images/user1.png">
-                                </a>
+                                <img src="images/user1.png">
                                 <div class="chat-about">
                                     <h5 class="m-b-0">John Smith</h5>
                                 </div>
